# Flow

./: .gitattributes  .gitignore  Flow.sln  README.md  Test.flow
Copy/: test.flow
Flow/: Branch.cpp  Branch.h  Color.cpp  Color.h  Config.h  Event.h  FileIO.cpp  FileIO.h  FileManager.cpp  FileManager.h  Flow.cpp  Flow.h  Flow.vcxproj  Flow.vcxproj.filters  History.cpp  History.h  Jsoncpp.cpp  LoadTexture.cpp  LoadTexture.h  Log.cpp  Log.h  Main.cpp  MainScene.cpp  MainScene.h  Metadata.cpp  Metadata.h  Node.h  Scene.cpp  Scene.h  Transition.cpp  Transition.h  UUID.h  Window.cpp  Window.h  ZipManager.cpp  ZipManager.h  endianness.h  flow.cur  han2unicode.cpp  han2unicode.h
FlowForMac/: Branch.cpp  Branch.h  CMakeLists.txt  Config.h  FileIO.cpp  FileIO.h  Flow.h  History.cpp  History.h  Log.cpp  Main.cpp  Metadata.cpp
FlowForMac/include/: C_CkAsn.h  C_CkAsnW.h  C_CkAuthAwsW.h  C_CkAuthAzureSAS.h  C_CkAuthAzureSASW.h  C_CkAuthAzureStorageW.h  C_CkAuthGoogle.h  C_CkAuthGoogleW.h  C_CkBinData.h  C_CkBinDataW.h  C_CkByteData.h  C_CkBz2.h  C_CkCache.h  C_CkCertChainW.h  C_CkCertStore.h  C_CkCertW.h  C_CkCgi.h  C_CkCgiW.h  C_CkCharset.h  C_CkCompression.h  C_CkCompressionW.h  C_CkCreateCS.h  C_CkCrypt2.h  C_CkCrypt2W.h  C_CkCspW.h  C_CkCsrW.h  C_CkCsvW.h  C_CkDateTime.h  C_CkDh.h  C_CkDhW.h  C_CkDkim.h  C_CkDtObjW.h  C_CkEcc.h  C_CkEccW.h  C_CkEdDSAW.h  C_CkEmailBundle.h  C_CkEmailBundleW.h  C_CkEmailW.h  C_CkFileAccess.h  C_CkFileAccessW.h  (+244 more)
Installer/: source.nsi
PyGUI/: branchactionmenu.py  branchselection.py  branchselectionforreplace.py  commitnamedialog.py  flow.cur  (+11 more)
(+405 files in other folders)
